# discord-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: discord_endpoint_map.md
examples/: poll_new_dms.py
src/discord_user_mcp/: __init__.py  config.py  main.py  mcp_server.py  status_rotator.py
src/discord_user_mcp/discord/: __init__.py  gateway.py  models.py  rest.py
src/discord_user_mcp/services/: __init__.py  runtime.py
src/discord_user_mcp/storage/: __init__.py  db.py
tests/: test_config.py  test_gateway.py  test_mcp_server.py  test_rest.py  test_runtime.py  test_status_rotator.py  test_store.py
