[project]
name = "discord-user-mcp"
version = "0.1.0"
description = "Local user-authenticated Discord DM MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "mcp>=1.15.0",
    "pydantic>=2.10.0",
    "uvicorn>=0.30.0",
    "websockets>=14.0",
]

[project.scripts]
discord-user-mcp = "discord_user_mcp.main:main"
discord-custom-status-rotator = "discord_user_mcp.status_rotator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_user_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
